--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,4 +24,18 @@
   .card {
     @apply bg-white rounded-lg shadow-md p-6;
   }
+  
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  
+  .line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 } 
